src/snapshots/pathos__syntax__test__subtraction_precedence.snap
---
source: src/syntax.rs
expression: result.unwrap()
---
- name: subsub
  parameters: []
  return_type: Int
  body:
    - Return:
        BinaryOperation:
          - Subtract
          - BinaryOperation:
              - Subtract
              - Literal: 1
              - Literal: 2
          - Literal: 3
